# libwhereami

./: CHANGELOG.md  CMakeLists.txt
exe/: CMakeLists.txt  whereami.cc
